<!--
  ~ Copyright (c)  Updated by eric on  6/14/20 2:13 PM
  -->

<resources>
    <string name="app_name">Debts Manager</string>
    <string name="reset_password">Reset Password   </string>
    <string name="account_email">Account Email</string>
    <string name="get_link_via_email">Get link via Email</string>
    <string name="new_password">New password</string>
    <string name="verify">Verify</string>
    <string name="warning"><b>  WARNING!</b></string>
    <string name="create_new_account">Create new account</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in"><b>Log In</b></string>
    <string name="contacts"><b>Contacts</b></string>
    <string name="sign_in"><b>Sign In</b></string>
    <string name="report_issue"><b>Report Issue</b></string>
    <string name="debtors">Debtors</string>
    <string name="my_debts">My debts</string>
    <string name="loans">Loans</string>
    <string name="installments_hp">Installments</string>
    <string name="step_one_description"> Enter the Email you used to create the
                                        account in the \'Account Email\' field. Ensure that
                                        you have strong internet connection and do not exit the
                                        App completely during the whole process.
                                         Click \'Get link via Email\' button and you\'ll
                                         receive an email containing a special link. </string>
    <string name="step_two_description">Open Gmail (preferably by clicking the notification or by
        first pressing the home button) then click the link you
        just received and follow onscreen instructions to create
        a new password. Upon come back to Debts Manager , enter
        your new password and then click \'verify\' to proceed</string>
    <string name="step_2">Step 2.</string>
    <string name="step_1">Step 1.</string>
    <string name="x">X</string>
    <string name="how_to_reset_password">How to reset password</string>
    <string name="data_analysis"><u>Data Analysis</u></string>
    <string name="profile">Profile</string>
    <string name="plus">+</string>
    <string name="download_link"><u> https://playstore.google.com/debtsmanagerv186 </u></string>
    <string name="developer"><b>Eric gacoki</b></string>
    <!--
    Todo create strings here to avoid hard corded ones
-->
</resources>
