<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c)  Updated by eric on  6/14/20 2:13 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/resetPasswordView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@color/colorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rdHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_bold"
            android:text="@string/how_to_reset_password"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/resetPasswordView"
            app:layout_constraintEnd_toStartOf="@+id/rdCancel"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="@+id/resetPasswordView"
            app:layout_constraintTop_toTopOf="@+id/resetPasswordView"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/rdCancel"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/exo_bold"
            android:text="@string/x"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/resetPasswordView"
            app:layout_constraintEnd_toEndOf="@+id/resetPasswordView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/resetPasswordView"
            app:layout_constraintTop_toTopOf="@+id/resetPasswordView" />

        <TextView
            android:id="@+id/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/step_1"
            android:textColor="@color/colorBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/stepOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordView" />

        <TextView
            android:id="@+id/stepOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/step_one_description"
            android:textColor="#2D2C30"
            app:layout_constraintBottom_toTopOf="@+id/step2"
            app:layout_constraintEnd_toStartOf="@+id/rdCancel"
            app:layout_constraintStart_toEndOf="@+id/step1"
            app:layout_constraintTop_toBottomOf="@+id/step1" />

        <TextView
            android:id="@+id/step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/step_2"
            android:textColor="@color/colorBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/stepTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/step1"
            app:layout_constraintTop_toBottomOf="@+id/stepOne" />

        <TextView
            android:id="@+id/stepTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/step_two_description"
            android:textColor="#3B393F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/stepOne"
            app:layout_constraintStart_toStartOf="@+id/stepOne"
            app:layout_constraintTop_toBottomOf="@+id/step2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>