<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c)  Updated by eric on  6/14/20 2:13 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10FFFFFF"
    tools:context=".auth.ResetPassword">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/getLinkStateImage"
        android:layout_width="97dp"
        android:layout_height="97dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/sad_face"
        android:visibility="invisible"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLinkStateImage"
        app:layout_constraintVertical_bias="0.15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            tools:hint="@string/account_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/rBtnGetLink"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_sign_in_selector"
        android:fontFamily="@font/exo_bold"
        android:text="@string/get_link_via_email"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rBtnVerify"
        app:layout_constraintEnd_toEndOf="@+id/rBtnVerify"
        app:layout_constraintStart_toStartOf="@+id/rBtnVerify"
        app:layout_constraintTop_toTopOf="@+id/rBtnVerify" />

    <com.ldoublem.loadingviewlib.LVCircular
        android:id="@+id/eLoadingView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/cLoadingView"
        app:layout_constraintEnd_toEndOf="@+id/cLoadingView"
        app:layout_constraintStart_toStartOf="@+id/cLoadingView"
        app:layout_constraintTop_toTopOf="@+id/cLoadingView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:maxLines="1"
            tools:hint="@string/new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/rBtnVerify"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@drawable/btn_log_in_selector"
        android:fontFamily="@font/exo_bold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toTopOf="@+id/eLoadingView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.6" />

    <com.ldoublem.loadingviewlib.LVCircular
        android:id="@+id/cLoadingView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rBtnGetLink" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/exo_bold"
        android:text="@string/reset_password"
        android:textColor="@color/colorOrange"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rBtnBack"
        android:layout_width="40dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_arrow_back_black"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toBottomOf="@+id/eLoadingView"
        app:layout_constraintEnd_toStartOf="@+id/eLoadingView"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/rBtnGetLink"
        app:layout_constraintTop_toTopOf="@+id/eLoadingView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rContacts"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/eLoadingView"
        app:layout_constraintEnd_toEndOf="@+id/rBtnGetLink"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/eLoadingView"
        app:layout_constraintTop_toTopOf="@+id/eLoadingView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_phone"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>